# aws-samples

./: MCP_リソース索引.md  MCP_整理完了報告.md  MCP_日本語概要.md  README.md
eks/: Makefile  al2023_user_data.tpl  main.tf  (+2 more)
machinelearning/ai-gateway/appsync-pattern/: .gitignore  README.md  pyproject.toml  ruff.toml
machinelearning/ai-gateway/appsync-pattern/cdk/: .gitignore  package-lock.json  package.json
machinelearning/ai-gateway/appsync-pattern/cdk/graphql/: schema.graphql
machinelearning/ai-gateway/appsync-pattern/cdk/lambda/: appsync_client.py  inference.py  inference_service.py  update_status.py
machinelearning/ai-gateway/appsync-pattern/cdk/lib/: ai-gateway-stack.ts
machinelearning/ai-gateway/appsync-pattern/test/: .env.sample  async_inference_test.py  create_test_user.py  run_tests.sh  test_graphql_api.py  test_helpers.py  update_status_test.py
machinelearning/sagemaker-examples/rembg-sagemaker-async-inference/: README.md  build_and_push.sh  deploy_endpoint.py  pyproject.toml  setup_and_deploy.sh
machinelearning/sagemaker-examples/rembg-sagemaker-async-inference/app/: .env.sample  Dockerfile  README.md  build_and_push.sh  cloudwatch_metrics.py  deploy_endpoint.py  download_models.py  inference.py  inference_processor.py  rembg_handler.py  request_endpoint.py  sagemaker_client.py  serve  setup_and_deploy.sh  update_env.py
machinelearning/sagemaker-examples/rembg-sagemaker-async-inference/cdk/: package-lock.json  package.json
machinelearning/sagemaker-examples/rembg-sagemaker-async-inference/cdk/lib/: rembg-async-inference-stack.ts
machinelearning/sagemaker-examples/rembg-sagemaker-async-inference/container/: Dockerfile  inference.py  serve
machinelearning/sagemaker-examples/rembg-serving/: .gitignore  Dockerfile  README.md  post.sh  pyproject.toml
machinelearning/sagemaker-examples/rembg-serving/app/: main.py
serverless/local-ide-with-aws-step-functions/: README.md  pyproject.toml  samconfig.toml  template.yaml
serverless/local-ide-with-aws-step-functions/functions/dynamodb_writer/: app.py
serverless/local-ide-with-aws-step-functions/functions/notification/: app.py
serverless/local-ide-with-aws-step-functions/functions/s3_reader/: app.py
serverless/local-ide-with-aws-step-functions/scripts/: create_sample_data.py  create_step_functions_role.py
serverless/local-ide-with-aws-step-functions/statemachine/: workflow.asl.json
serverless/local-ide-with-aws-step-functions/tests/step_inputs/: check_data.json  dynamodb_writer.json  s3_reader.json
serverless/local-ide-with-aws-step-functions/tests/unit/: test_s3_reader.py
workshops/ai-coding-workshop/cline/5.mlflow/: .env.example  .gitignore  Dockerfile  README.md  default_config.yml  docker-compose.yml  litellm_config.yml  manage-mlflow.sh  mlflow_callback.py  pyproject.toml  test_litellm_mlflow.py  test_mlflow_callback_only.py
workshops/ai-coding-workshop/cline/5.mlflow/cdk/: package-lock.json
workshops/langgraph-workshop/: .gitignore  README.md  pyproject.toml
workshops/langgraph-workshop/Lab_1/: Lab_1.ipynb  README.md
workshops/langgraph-workshop/Lab_2/: Lab_2.ipynb  README.md
workshops/langgraph-workshop/Lab_3/: Lab_3.ipynb  README.md
workshops/langgraph-workshop/Lab_4/: Lab_4.ipynb  README.md
workshops/langgraph-workshop/Lab_5/: Lab_5.ipynb  README.md
workshops/langgraph-workshop/Lab_6/: Lab_6.ipynb  README.md  helper.py
workshops/langgraph-workshop/utils/: utils.py
(+465 files in other folders)
