[project]
name = "langgraph-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.3",
    "langchain-aws>=0.2.27",
    "langchain-community>=0.3.27",
    "langgraph>=0.5.1",
    "python-dotenv>=1.1.1",
]
