[project]
name = "langgraph-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "beautifulsoup4>=4.13.4",
    "boto3>=1.39.3",
    "duckduckgo-search>=8.1.1",
    "ipywidgets>=8.1.7",
    "langchain-aws>=0.2.27",
    "langchain-community>=0.3.27",
    "langgraph>=0.5.1",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.9",
]
