[project]
name = "rembg-sagemaker-async-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.36.17",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sagemaker>=2.239.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "uvicorn>=0.34.0",
]
