[project]
name = "rembg-serving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.8",
    "gunicorn>=23.0.0",
    "llvmlite>=0.43.0",
    "numba>=0.60.0",
    "numpy==1.26.0",
    "onnxruntime==1.19.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "rembg>=2.0.61",
    "scipy>=1.13.1",
    "uvicorn>=0.34.0",
]
