[project]
name = "5-mlflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.37.36",
    "litellm>=1.66.3",
    "mlflow==2.16.2",
    "mlflow-skinny>=2.16.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "sagemaker-mlflow>=0.1.0",
]
